Bug 1736431 - Allowlist URLs containing the string "backgroundtasks". r=Gijs

Differential Revision: https://phabricator.services.mozilla.com/D129327